 * Improved ctrl + f speed significantly
 * Made nydus launch pad bullets not render (the servers till sends tons of packets so it still kills wifi but oh well)
 * Fixed a problem with navigation that could cause it to not work correctly when playing the flood gamemode
 * Added !distance to change the distance multiplier of the assist command, the default is 1.5

# Version 7.3.0
 * Fixed an issue in buildpath where !builder belts and !builder drill would only partially upgrade each building
 * Reworks to buildpath, hopefully its faster?
 * Removed debug logging that shouldn't have been left in
 * Fixed monofont disable option for real
 * Disabled monofont by default for everyone
 * Merged the normal font with the monofont so that it displays characters that arent included in the font (they do look janky though)
 * Made the numbers in the normal font monospaced, they dont look too different but are readable when they are changing a lot 0123456789
 * Added fallback discord presence for older java versions
 * Added setting to find all non bundle strings
 * Made some progress towards localization of the client, many of the strings are now in bundle and can be translated (its nowhere near done but its a start)
 * Fixed an issue where formation units weren't being displayed as such in tile logs
 * Fixed an issue in tile logs where a half built/broken block being destroyed would display something along the lines of "build1"
 * Fixed an issue with the coordinate highlighter which allowed players to kick client users by typing very large numbers
 * Fixed an issue with tile logs which caused disconnects (this only ever happened when admins used js to kick people on purpose but still)
 * Pressing escape will now close the player list if it is open
 * Completely reworked virus warnings, they should now always trigger on real viruses and never trigger on non viruses
 * Added a  indicator when placing a drill, it shows the drill speed when coolant is added