@@ -7,6 +7,7 @@
  * Made nydus launch pad bullets not render (the servers till sends tons of packets so it still kills wifi but oh well)
  * Fixed a problem with navigation that could cause it to not work correctly when playing the flood gamemode
  * Added !distance to change the distance multiplier of the assist command, the default is 1.5
+ * Ctrl clicking a name in the player list will copy a simple js script to get the player: Groups.player.getByID(id)
 
 # Version 7.3.0
  * Fixed an issue in buildpath where !builder belts and !builder drill would only partially upgrade each building
